--- a/doc/context/sources/general/manuals/workflows/workflows-style.tex
+++ b/doc/context/sources/general/manuals/workflows/workflows-style.tex
@@ -35,4 +35,16 @@
 \setuptype
   [color=maincolor]
 
+
+\setupdocument
+  [metadata:author=<author>,
+   metadata:title=<title>,
+   author=<author>,
+   affiliation=<affiliation>,
+   location=<location>,
+   title=<title>,
+   extra=<extra>,
+   support=<support>,
+   website=<website>]
+
 \stopenvironment
