--- a/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
@@ -230,6 +230,10 @@ which in turn triggered renaming primitives.
 \stopitem
 
 \startitem
+    The \type {\pdfcopyfont} primitive is now \type {\copyfont}.
+\stopitem
+
+\startitem
     The \type {\pdffontexpand} primitive is now \type {\expandglyphsinfont}.
 \stopitem
 
@@ -253,6 +257,16 @@ which in turn triggered renaming primitives.
     The introspective primitives \type {\pdflastximagecolordepth} and \type
     {\pdfximagebbox} have been removed. One can use external applications to
     determine these properties or use the built|-|in \type {img} library.
+\stopitem
+
+\startitem
+    The initializers \type {\pdfoutput} has been replaced by \type {\outputmode} and
+    \type {\pdfdraftmode} is now \type {\draftmode}.
+\stopitem
+
+\startitem
+    The pixel multiplier dimension \type {\pdfpxdimen} lots its prefix and is now calles
+    {\pxdimen}.
 \stopitem
 
 \stopitemize
@@ -332,7 +346,7 @@ we say next applies to both these programs.
 \stopitem
 
 \startitem
-    Several bugs hav ebeen fixed. The \type {\hoffset} bug when \type {\pagedir TRT}
+    Several bugs have been fixed. The \type {\hoffset} bug when \type {\pagedir TRT}
     is gone, removing the need for an explicit fix to \type {\hoffset}. Also bug
     causing \type {\fam} to fail for family numbers above 15 is fixed. A fair amount
     of other minor bugs are fixed as well, most of these related to \type
@@ -378,6 +392,11 @@ we say next applies to both these programs.
     The direction related primitives \type {\pagedir}, \type {\bodydir}, \type
     {\pardir}, \type {\textdir}, \type {\mathdir} and \type {\boxdir} are now
     core primitives.
+\stopitem
+
+\startitem
+    The primitive \type {\pdftracingfonts} and \type {\tracingfonts} as it doesn't relate
+    to the backend.
 \stopitem
 
 \startitem
