--- a/tex/generic/context/luatex/luatex-pdf.tex
+++ b/tex/generic/context/luatex/luatex-pdf.tex
@@ -2,8 +2,8 @@
 
 \begingroup
 
-\catcode`\{ =  1 % left  brace is begin-group character
-\catcode`\} =  2 % right brace is end-group   character
+\catcode`\{ = 1 % left  brace is begin-group character
+\catcode`\} = 2 % right brace is end-group   character
 
 \ifdefined\pdfextension
 
@@ -116,6 +116,7 @@
     \xdef\pdfimageapplygamma          {\pdfvariable imageapplygamma}
     \xdef\pdfimagegamma               {\pdfvariable imagegamma}
     \xdef\pdfimagehicolor             {\pdfvariable imagehicolor}
+    \xdef\pdfimageaddfilename         {\pdfvariable imageaddfilename}
     \xdef\pdfpkresolution             {\pdfvariable pkresolution}
     \xdef\pdfinclusioncopyfonts       {\pdfvariable inclusioncopyfonts}
     \xdef\pdfinclusionerrorlevel      {\pdfvariable inclusionerrorlevel}
@@ -148,6 +149,7 @@
     \global\pdfimageapplygamma       0
     \global\pdfimagegamma         2200
     \global\pdfimagehicolor          1
+    \global\pdfimageaddfilename      1
     \global\pdfpkresolution         72
     \global\pdfinclusioncopyfonts    0
     \global\pdfinclusionerrorlevel   0
@@ -162,6 +164,11 @@
     \global\pdflinkmargin          0pt
     \global\pdfdestmargin          0pt
     \global\pdfthreadmargin        0pt
+
+    % maybe
+
+  % \global\chardef\pdftexversion  140
+  % \global\def    \pdftexrevision {16}
 
 \fi
 
