--- a/tex/generic/context/luatex/luatex-pdf.tex
+++ b/tex/generic/context/luatex/luatex-pdf.tex
@@ -94,6 +94,8 @@
 
     % converted
 
+    \gdef\pdftexversion       {\numexpr\pdffeedback version}
+    \gdef\pdftexrevision              {\pdffeedback revision}
     \gdef\pdflastlink         {\numexpr\pdffeedback lastlink}
     \gdef\pdfretval           {\numexpr\pdffeedback retval}
     \gdef\pdflastobj          {\numexpr\pdffeedback lastobj}
