--- a/doc/context/sources/general/manuals/luatex/luatex-math.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-math.tex
@@ -608,7 +608,7 @@ The superscript in \type {\Uoverdelimiter} is typeset in a suitable scripted sty
 the subscript in \type {\Uunderdelimiter} is cramped as well.
 
 These primitives accepts an option \type {width} specification. When used the
-also optional keywords \type {left}, \type {center} and \type {right} will
+also optional keywords \type {left}, \type {middle} and \type {right} will
 determine what happens when a requested size can't be met (which can happen when
 we step to successive larger variants).
 
@@ -625,7 +625,7 @@ $\Uhextensible width 10cm 0 "2194$
 Here you can also pass options, like:
 
 \startbuffer
-$\Uhextensible width 1pt center 0 "2194$
+$\Uhextensible width 1pt middle 0 "2194$
 \stopbuffer
 
 \typebuffer This gives:
