--- a/doc/context/sources/general/manuals/luatex/luatex-math.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-math.tex
@@ -91,7 +91,7 @@ Unaltered:
 New primitives that are compatible with \XETEX:
 
 \starttabulate[|l|l|l|l|]
-\NC \bf primitive             \NC \bf value range (in hex)             \NC \NR
+\NC \bf primitive                \NC \bf value range (in hex)             \NC \NR
 \NC \type {\Umathchardef}        \NC 0+0+0--7+FF+10FFFF$^1$               \NC \NR
 \NC \type {\Umathcharnumdef}$^5$ \NC -80000000--7FFFFFFF$^3$              \NC \NR
 \NC \type {\Umathcode}           \NC 0--10FFFF = 0+0+0--7+FF+10FFFF$^1$   \NC \NR
@@ -105,15 +105,19 @@ New primitives that are compatible with \XETEX:
 \NC \type {\Udelcodenum}         \NC 0--10FFFF = -80000000--7FFFFFFF$^3$  \NC \NR
 \stoptabulate
 
-Note 1: \type {\Umathchardef<csname>="8"0"0} and \type
-{\Umathchardef<number>="8"0"0} are also accepted.
+Specifications typically look like:
 
-Note 2: The new primitives that deal with delimiter-style objects do not set up a
+\starttyping
+\Umathchardef\xx="1"0"456
+\Umathcode   123="1"0"789
+\stoptyping
+
+Note 1: The new primitives that deal with delimiter-style objects do not set up a
 \quote {large family}. Selecting a suitable size for display purposes is expected
 to be dealt with by the font via the \type {\Umathoperatorsize} parameter (more
 information can be found in a following section).
 
-Note 3: For these three primitives, all information is packed into a single
+Note 2: For these three primitives, all information is packed into a single
 signed integer. For the first two (\type {\Umathcharnum} and \type {\Umathcodenum}),
 the lowest 21 bits are the character code, the 3 bits above that represent the
 math class, and the family data is kept in the topmost bits (This means that the
@@ -124,7 +128,7 @@ natural as using the two- and three-value commands, so unless you know exactly
 what you are doing and absolutely require the speedup resulting from the faster
 input scanning, it is better to use the verbose commands instead.
 
-Note 4: The \type {\Umathaccent} command accepts optional keywords to control
+Note 3: The \type {\Umathaccent} command accepts optional keywords to control
 various details regarding math accents. See \in {section} [mathacc] below for
 details.
 
@@ -161,10 +165,10 @@ now accessible via primitive commands. In fact, refactoring of the math engine
 has resulted in many more parameters than were accessible before.
 
 \starttabulate
-\NC \bf primitive name              \NC \bf description \NC \NR
+\NC \bf primitive name               \NC \bf description \NC \NR
 \NC \type {\Umathquad}               \NC the width of 18mu's \NC \NR
 \NC \type {\Umathaxis}               \NC height of the vertical center axis of
-                                        the math formula above the baseline \NC \NR
+                                         the math formula above the baseline \NC \NR
 \NC \type {\Umathoperatorsize}       \NC minimum size of large operators in display mode \NC \NR
 \NC \type {\Umathoverbarkern}        \NC vertical clearance above the rule \NC \NR
 \NC \type {\Umathoverbarrule}        \NC the width of the rule \NC \NR
@@ -176,15 +180,15 @@ has resulted in many more parameters than were accessible before.
 \NC \type {\Umathradicalrule}        \NC the width of the rule \NC \NR
 \NC \type {\Umathradicalvgap}        \NC vertical clearance below the rule \NC \NR
 \NC \type {\Umathradicaldegreebefore}\NC the forward kern that takes place before placement of
-                                        the radical degree \NC \NR
+                                         the radical degree \NC \NR
 \NC \type {\Umathradicaldegreeafter} \NC the backward kern that takes place after placement of
-                                        the radical degree \NC \NR
+                                         the radical degree \NC \NR
 \NC \type {\Umathradicaldegreeraise} \NC this is the percentage of the total height and depth of
-                                        the radical sign that the degree is raised by. It is
-                                        expressed in \type {percents}, so 60\% is expressed as the
-                                        integer $60$. \NC \NR
+                                         the radical sign that the degree is raised by. It is
+                                         expressed in \type {percents}, so 60\% is expressed as the
+                                         integer $60$. \NC \NR
 \NC \type {\Umathstackvgap}          \NC vertical clearance between the two
-                                        elements in a \type {\atop} stack \NC \NR
+                                         elements in a \type {\atop} stack \NC \NR
 \NC \type {\Umathstacknumup}         \NC numerator shift upward in \type {\atop} stack \NC \NR
 \NC \type {\Umathstackdenomdown}     \NC denominator shift downward in \type {\atop} stack \NC \NR
 \NC \type {\Umathfractionrule}       \NC the width of the rule in a \type {\over} \NC \NR
@@ -209,11 +213,11 @@ has resulted in many more parameters than were accessible before.
 \NC \type {\Umathsupshiftup}         \NC superscript raise for characters \NC \NR
 \NC \type {\Umathsubsupshiftdown}    \NC subscript drop in the presence of a superscript \NC \NR
 \NC \type {\Umathsubtopmax}          \NC the top of standalone subscripts cannot be higher than this
-                                        above the baseline \NC \NR
+                                         above the baseline \NC \NR
 \NC \type {\Umathsupbottommin}       \NC the bottom of standalone superscripts cannot be less than
-                                        this above the baseline \NC \NR
+                                         this above the baseline \NC \NR
 \NC \type {\Umathsupsubbottommax}    \NC the bottom of the superscript of a combined super- and subscript
-                                        be at least as high as this above the baseline \NC \NR
+                                         be at least as high as this above the baseline \NC \NR
 \NC \type {\Umathsubsupvgap}         \NC vertical clearance between super- and subscript \NC \NR
 \NC \type {\Umathspaceafterscript}   \NC additional space added after a super- or subscript \NC \NR
 \NC \type {\Umathconnectoroverlapmin}\NC minimum overlap between parts in an extensible recipe \NC \NR
@@ -498,12 +502,22 @@ font of the accentee (as explained in the \TEX book), but if value that turns ou
 to be zero and the font had a MathConstants table, then \type {AccentBaseHeight}
 is used instead.
 
-If a math bottom accent has to be placed, the \type {bot_accent} value is checked
-instead of \type {top_accent}. Because bottom accents do not exist in \TEX82, the
-\type {\skewchar} kern is ignored.
+% there is no bot_accent in opentype math
+%
+% If a math bottom accent has to be placed, the \type {bot_accent} value is checked
+% instead of \type {top_accent}. Because bottom accents do not exist in \TEX82, the
+% \type {\skewchar} kern is ignored.
 
 The vertical placement of a bottom accent is straight below the accentee, no
 correction takes place.
+
+Possible locations are \type {top}, \type {bottom}, \type {both} and \type
+{center}. When no location is given \type {top} is assumed. An additional
+parameter \type {fraction} can be specified followed by a number; a value of for
+instance 1200 means that the criterium is 1.2 times the width of the nuclues. The
+fraction only aplies to the stepwise selected shapes and is mostly meant for the
+\type {overlay} location. It also works for the other locations but then it
+concerns the width.
 
 \section{Math root extension}
 
@@ -726,29 +740,29 @@ of \type {\mathsurround}, we can remain compatible.
 % \stopitem
 % \stopitemize
 
-\subsection {Delimiters}
+\subsection {Delimiters: \type{\Uleft}, \type {\Umiddle} and \type {\Uright}}
 
-You can force delimiters to certain sizes by putting an empty box or rule next to
-it. The resulting delimiter will either be a character from the stepwise size
-range or an extensible. The latter can be quiote differently positioned that the
-characters as it depends on the fit aas well as the fact if the used characters
-in the font have depth or height. Commands like (plain \TEX s) \type {\big} need
-use this feature. In \LUATEX\ we provide a bit more control by supporting optional
-parameters \type {height}, \type {depth} and \type {axis}. The following example
-uses this:
+Normally you will force delimiters to certain sizes by putting an empty box or
+rule next to it. The resulting delimiter will either be a character from the
+stepwise size range or an extensible. The latter can be quite differently
+positioned that the characters as it depends on the fit aas well as the fact if
+the used characters in the font have depth or height. Commands like (plain \TEX
+s) \type {\big} need use this feature. In \LUATEX\ we provide a bit more control
+by three variants that supporting optional parameters \type {height}, \type
+{depth} and \type {axis}. The following example uses this:
 
 \startbuffer
-\normalleft   height 30pt depth 10pt      \Udelimiter "0 "0 "000028
+\Uleft   height 30pt depth 10pt      \Udelimiter "0 "0 "000028
 \quad x\quad
-\normalmiddle height 40pt depth 15pt      \Udelimiter "0 "0 "002016
+\Umiddle height 40pt depth 15pt      \Udelimiter "0 "0 "002016
 \quad x\quad
-\normalright  height 30pt depth 10pt      \Udelimiter "0 "0 "000029
+\Uright  height 30pt depth 10pt      \Udelimiter "0 "0 "000029
 \quad \quad \quad
-\normalleft   height 30pt depth 10pt axis \Udelimiter "0 "0 "000028
+\Uleft   height 30pt depth 10pt axis \Udelimiter "0 "0 "000028
 \quad x\quad
-\normalmiddle height 40pt depth 15pt axis \Udelimiter "0 "0 "002016
+\Umiddle height 40pt depth 15pt axis \Udelimiter "0 "0 "002016
 \quad x\quad
-\normalright  height 30pt depth 10pt axis \Udelimiter "0 "0 "000029
+\Uright  height 30pt depth 10pt axis \Udelimiter "0 "0 "000029
 \stopbuffer
 
 \typebuffer
@@ -761,6 +775,9 @@ The keyword \type {exact} can be used as directive that the real dimensions
 should be applied when the criteria can't be met which can happen when we're
 still stepping through the succesively larger variants. When no dimensions are
 given the \type {noaxis} command can be used to prevent shifting over the axis.
+
+You can influence the final class with the keyword \type {class} which will
+influence the spacing.
 
 \subsection {Math options}
 
@@ -829,6 +846,11 @@ Gives (with computer modern that has such italics):
             {\nohyphens\type{1:display}}
     \stopcombination
 \stoplinecorrection
+
+\subsubsection {\type {\mathoption useoldfractionscaling}}
+
+This option has been introduced as solution for tracker item 604 for fuzzy cases
+around either or not present fraction related settings for new fonts.
 
 \stopchapter
 
