--- a/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
@@ -646,9 +646,12 @@ And even:
 \newdimen\pdfignoreddimen
 \stoptyping
 
-\stopsubsection
+The backend is derived from \PDFTEX\ so the same syntax applies. However, the
+\type {outline} command accepts a \type {objnum} followed by a number. No
+checking takes place so when this is used it had better be a valid (flushed)
+object.
 
-\stopsection
+\stopsubsection
 
 \stopsection
 
