--- a/doc/context/sources/general/manuals/luatex/luatex-libraries.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-libraries.tex
@@ -537,6 +537,22 @@ represent a hbox. Failure to do so will result in a fatal error.
 Setting this callback to \type {false} is possible, but dangerous, because it is
 possible you will end up in an unfixable \quote {deadcycles loop}.
 
+\subsubsection{\type {append_to_vlist_filter}}
+
+This callback is called whenever \LUATEX\ adds a box to a vertical list:
+
+\startfunctioncall
+function(<node> box, <string> locationcode, <number prevdepth>,
+    <boolean> mirrored)
+    return list, prevdepth
+end
+\stopfunctioncall
+
+It is ok to return nothing in which case you also need to flush the box or deal
+with it yourself. The prevdepth is also optional. Locations are \type {box},
+\type {alignment}, \type {equation}, \type {equation_number} and \type
+{post_linebreak}.
+
 \subsubsection{\type {post_linebreak_filter}}
 
 This callback is called just after \LUATEX\ has converted a list of nodes into a
@@ -5012,6 +5028,9 @@ tex.splitmaxdepth
 tex.vfuzz
 tex.voffset
 tex.vsize
+tex.prevdepth
+tex.prevgraf
+tex.spacefactor
 \stoptyping
 \stopthreecolumns
 
@@ -5027,9 +5046,39 @@ tex.pagegoal
 tex.pageshrink
 tex.pagestretch
 tex.pagetotal
-tex.prevdepth
 \stoptyping
 \stopthreecolumns
+
+Beware: as with all \LUA\ tables you can add values to them. So, the following is valid:
+
+\starttyping
+tex.foo = 123
+\stoptyping
+
+When you access a \TEX\ parameter a look up takes place. For read||only variables
+that means that you will get something back, but when you set them you create a
+new entry in the table thereby making the original invisible.
+
+There are a few special cases that we make an exception for: \type {prevdepth},
+\type {prevgraf} and \type {spacefactor}. These normally are accessed via the
+\type {tex.nest} table:
+
+\starttyping
+tex.nest[tex.nest.ptr].prevdepth   = p
+tex.nest[tex.nest.ptr].spacefactor = s
+\stoptyping
+
+However, the following also works:
+
+\starttyping
+tex.prevdepth   = p
+tex.spacefactor = s
+\stoptyping
+
+Keep in mind that when you mess with node lists directly at the \LUA\ end you
+might need to update the top of the nesting stack's \type {prevdepth} explicitly
+as there is no way \LUATEX\ can guess your intentions. By using the accessor in
+the \type {tex} tables, you get and set the values atthe top of the nest stack.
 
 \subsubsection{Direction parameters}
 
@@ -5775,15 +5824,15 @@ will define \type {\LuaTeXformatname} with the same intrinsic meaning as the
 documented primitive \type {\formatname}, provided that the control sequences \type
 {\LuaTeXformatname} is currently undefined.
 
-Second example:
-
-\starttyping
-  tex.enableprimitives('Omega',tex.extraprimitives ('omega'))
-\stoptyping
-
-will define a whole series of csnames like \type {\Omegatextdir}, \type
-{\Omegapardir}, etc., but it will stick with \type {\OmegaVersion} instead of
-creating the doubly-prefixed \type {\OmegaOmegaVersion}.
+% Second example:
+%
+% \starttyping
+%   tex.enableprimitives('Omega',tex.extraprimitives ('omega'))
+% \stoptyping
+%
+% will define a whole series of csnames like \type {\Omegatextdir}, \type
+% {\Omegapardir}, etc., but it will stick with \type {\OmegaVersion} instead of
+% creating the doubly-prefixed \type {\OmegaOmegaVersion}.
 
 When \LUATEX\ is run with \type {--ini} only the \TEX82 primitives and \type
 {\directlua} are available, so no extra primitives {\bf at all}.
@@ -5832,22 +5881,20 @@ end
 \NC tex     \NC \ctxlua{document.showprimitives('tex')    } \NC \NR
 \NC core    \NC \ctxlua{document.showprimitives('core')   } \NC \NR
 \NC etex    \NC \ctxlua{document.showprimitives('etex')   } \NC \NR
-\NC pdftex  \NC \ctxlua{document.showprimitives('pdftex') } \NC \NR
 \NC luatex  \NC \ctxlua{document.showprimitives('luatex') } \NC \NR
-\NC umath   \NC \ctxlua{document.showprimitives('umath') }  \NC \NR
 \stoptabulate
 
 Note that \type {'luatex'} does not contain \type {directlua}, as that
 isconsidered to be a core primitive, along with all the \TEX82 primitives, so it
 is part of the list that is returned from \type {'core'}.
 
-\type {'umath'} is a subset of \type {'luatex'} that covers the Unicode math
-primitives as it might be desired to handle the prefixing of that subset
-differently.
+% \type {'umath'} is a subset of \type {'luatex'} that covers the Unicode math
+% primitives as it might be desired to handle the prefixing of that subset
+% differently.
 
 Running \type {tex.extraprimitives()} will give you the complete list of
 primitives \type {-ini} startup. It is exactly equivalent to \type
-{tex.extraprimitives('etex', 'pdftex' and 'luatex')}.
+{tex.extraprimitives('etex' and 'luatex')}.
 
 \subsubsection{\type {tex.primitives}}
 
@@ -5859,6 +5906,12 @@ This function returns a hash table listing all primitives that \LUATEX\ knows
 about. The keys in the hash are primitives names, the values are tables
 representing tokens (see~\in{section }[luatokens]). The third value is always
 zero.
+
+{\em In the beginning we had \type {omega} and \type {pdftex} subsets but in the
+meantime relevant primitives ave been promoted (either or not adapted) to the
+\type {luatex} set when found useful, or removed when considered to be of no use.
+Originally we had two sets of math definition primitives but the \OMEGA\ ones
+have been removed, so we no longer have a subset for math either.}
 
 \subsection{Core functionality interfaces}
 
