--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -1,6 +1,8 @@
 % \tex vs \type vs \syntax vs. \luatex
 % \em \it \/
 
+% \enabledirectives[nodes.basepass*]
+
 \environment luatex-style
 \environment luatex-logos
 
