--- a/tex/generic/context/luatex/luatex-pdf.tex
+++ b/tex/generic/context/luatex/luatex-pdf.tex
@@ -104,7 +104,8 @@
     \chardef\pdfnocreationdate =  32
     \chardef\pdfnomoddate      =  64
     \chardef\pdfnoproducer     = 128
-    \chardef\pdfnoid           = 256
+    \chardef\pdfnotrapped      = 256
+    \chardef\pdfnoid           = 512
 
     % converted
 
