--- a/doc/context/sources/general/manuals/luatex/luatex-nodes.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-nodes.tex
@@ -462,7 +462,8 @@ The \type {is_char} function checks if a node is a glyphnode with a subtype stil
 less than 256. This function can be used to determine if applying font logic to a
 glyph node makes sense. The value \type {nil} gets returned when the node is not
 a glyph, a character number is returned if the node is still tagged as character
-and \type {false} gets returned otherwise.
+and \type {false} gets returned otherwise. When nil is returned, the id is also
+returned.
 
 \subsubsection{margin_kern nodes}
 
