--- a/tex/context/base/mkiv/context-todo.tex
+++ b/tex/context/base/mkiv/context-todo.tex
@@ -30,7 +30,8 @@
         redo some of the spacing (adapt to improvements in engine)
     \stopitem
     \startitem
-        use type {\matheqnogapstep} and other new primitives
+        use \type {\matheqnogapstep}, \type {\Ustack}, \type {\mathscriptsmode}
+        and other new math primitives
     \stopitem
 \stopitemize
 
