--- a/doc/context/sources/general/manuals/luatex/luatex-style.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-style.tex
@@ -53,10 +53,24 @@
             tex.sprint(', \\type{'.. node.subtype(t[2]) .. '}')
         end
     end
+
+    function document.functions.showsubtypes(s)
+        local s = node.subtypes(s)
+        local d = false
+        for k, v in table.sortedhash(s) do
+            if d then
+                context(', %s = {\\tttf %s}',k,v)
+            else
+                context('%s = {\\tttf %s}',k,v)
+                d = true
+            end
+        end
+    end
 \stopluacode
 
-\unexpanded\def\showfields#1{\ctxlua{document.functions.showfields("#1")}}
-\unexpanded\def\showid    #1{\ctxlua{document.functions.showid("#1")}}
+\unexpanded\def\showfields  #1{\ctxlua{document.functions.showfields("#1")}}
+\unexpanded\def\showid      #1{\ctxlua{document.functions.showid("#1")}}
+\unexpanded\def\showsubtypes#1{\ctxlua{document.functions.showsubtypes("#1")}}
 
 \definecolor[blue]      [b=.5]
 \definecolor[red]       [r=.5]
@@ -107,10 +121,10 @@
 \setupbodyfont % assumes dejavu-math
   [dejavu,10pt]
 
-\setuphead [chapter]      [style=\bfd]
-\setuphead [section]      [style=\bfb]
-\setuphead [subsection]   [style=\bfa]
-\setuphead [subsubsection][style=\bf]
+\setuphead [chapter]      [align={flushleft,broad},style=\bfd]
+\setuphead [section]      [align={flushleft,broad},style=\bfb]
+\setuphead [subsection]   [align={flushleft,broad},style=\bfa]
+\setuphead [subsubsection][align={flushleft,broad},style=\bf]
 
 \setuphead [chapter]      [color=maincolor]
 \setuphead [section]      [color=maincolor]
@@ -141,11 +155,13 @@
   [threecolumns]
   [n=4]
 
-\setuptyping
-  [color=maincolor]
-
-\setuptype
-  [color=maincolor]
+% if we do this we also need to do it in table cells
+%
+% \setuptyping
+%   [color=maincolor]
+%
+% \setuptype
+%   [color=maincolor]
 
 \definetyping
   [functioncall]
