--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -3,6 +3,12 @@
 % \tex vs \type vs \syntax vs. \luatex
 % \em \it \/
 
+\startmode[nodates]
+    \enabledirectives[backend.date=no]
+    \nopdfcompression
+\stopmode
+    \nopdfcompression
+
 \environment luatex-style
 \environment luatex-logos
 
